--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/avataaars.svg" />
+    <meta property="og:url" content="/index.html" />
+    <meta property="og:image" content="/public/avataaars.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home</title>
   </head>
